main: all basic functionality and scss styles also code was refactored

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://YanaKharlamova.github.io/react-todo-list-app-1",
+  "homepage": "http://YanaKharlamova.github.io/react-todo-list-app",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
